# paramkit

./: .gitignore  .pre-commit-config.yaml  api.md  pyproject.bak.toml  pyproject.toml  setup.py
paramkit/: cli.py  const.py  core.py  fields.py  utils.py
paramkit/api/: core.py  fields.py
paramkit/db/: __init__.py  core.py  model.py
paramkit/db/data/: api.db-shm  api.db-wal
paramkit/docs/: api.md  markdown.py
paramkit/docs/static/: index.html.br
paramkit/docs/static/_app/: version.json.br
paramkit/docs/static/_app/immutable/assets/: 0.9ieOFKKP.css  0.9ieOFKKP.css.br  0.DiJGgjqh.css.br  2.7sQyB7o9.css.br  2.B5DNjS8F.css.br  _layout.Cw-205RT.css  _layout.Cw-205RT.css.br  _layout.DiJGgjqh.css  prism.C7jA8Rb8.css.br  prism.cvYf9tVT.css.br  vendor.C5KeW34q.css.br  vendor.CdL7aAwO.css.br
paramkit/docs/static/_app/immutable/chunks/: 07VnHhG4.js.br  ByqK_VNA.js  ByqK_VNA.js.br  CD-t_EfD.js  CD-t_EfD.js.br  DAUSad8Q.js.br  DMmL9kUp.js  DMmL9kUp.js.br  RH_uCN0_.js  RH_uCN0_.js.br
paramkit/docs/static/_app/immutable/entry/: app.BBCXoNuP.js.br  app.D8c1hX6r.js.br  start.Bx4OjU-d.js.br  start.IcjcLZC3.js.br
paramkit/docs/static/_app/immutable/nodes/: 0.DALsemoB.js.br  0.DStjw1Le.js.br  2.Dxt0cNfo.js.br  2.ojqP7Fyp.js.br
paramkit/docs/static_/html/: index.html
